regressions/marans/SemanticErrors/identifierDeclaredMult.ic
//output: Failed.

class E{
      void main(string[] args){
      	   int x,y;
	   boolean y;
	   int x;
	}
}